# reverything

./: Cargo.toml  README.md  build.rs
src/: main.rs  ui.rs
src/ntfs/: file_attribute.rs  file_record.rs  index.rs  journal.rs  mft.rs  mod.rs  volume.rs
ui/: main_view.slint
