[package]
name = "reverything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.44.0", default-features = false, features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Ioctl"
] }
mimalloc = { version = "*", default-features = false }
eyre = "0.6.8"
rayon = "1.6.1"
widestring = "1.0.2"
rustc-hash = "1.1.0"
num_cpus = "1.15.0"