[package]
name = "reverything"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.58.0", default-features = false, features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Ioctl",
    "Win32_UI_HiDpi"
] }
mimalloc-rust = "0.2.1"
eyre = "0.6.8"
rayon = "1.6.1"
rustc-hash = "2.0.0"
num_cpus = "1.15.0"
smartstring = "1.0.1"
slint = "1.7.2"

[build-dependencies]
slint-build = "1.7.2"

[profile.dev]
debug = 2
